k8s/11-portfolio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: static-pages
  labels:
    app: portfolio
spec:
  selector:
    app: portfolio
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
