k8s/21-paaas-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: paaas
  namespace: static-pages
  labels:
    app: paaas
spec:
  selector:
    app: paaas
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
